# Jacobian_Calc_Auto_Gradient

./: CMakeLists.txt  README.MD  autograd.cpp  main.cpp  operators.cpp  variable.cpp  variablematrix.cpp
ATGlib/include/autograd/: autograd.h  cxxabialternative.h  operators.h  variable.h  variablematrix.h
autograd/: variable.h
